--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,4 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Create new booking
+        env:
+          DESKBIRD_ACCESS_TOKEN: ${{ secrets.DESKBIRD_ACCESS_TOKEN }}
         run: ./scripts/new_booking.sh
