--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,6 +10,8 @@ jobs:
   simple-task:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Create new booking
         env:
           DESKBIRD_ACCESS_TOKEN: ${{ secrets.DESKBIRD_ACCESS_TOKEN }}
