--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,4 +15,6 @@ jobs:
       - name: Create new booking
         env:
           DESKBIRD_ACCESS_TOKEN: ${{ secrets.DESKBIRD_ACCESS_TOKEN }}
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+          GOOGLE_API_URL: ${{ secrets.GOOGLE_API_URL }}
         run: ./scripts/new_booking.sh
