--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "@types/node": "^22.7.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0",
+    "dotenv-flow": "^4.1.0"
   }
 }
