--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "deskbird-scheduler",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/main.ts"
   },
   "keywords": [],
   "author": "Michael Schilling",
