--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,9 +10,16 @@ jobs:
   simple-task:
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Use Node.js 22
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+
       - name: Create new booking
         env:
           REFRESH_TOKEN: ${{ secrets.DESKBIRD_REFRESH_TOKEN }}
-        run: ./scripts/new_booking.sh
+        run: npm run start
