--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@date-fns/tz": "^1.1.2",
     "date-fns": "^4.1.0",
     "dotenv-flow": "^4.1.0"
   }
